--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,20 @@
 databricks_config:
   catalog: doan # TODO: add catalog
   schema: dynamic_governance_example # TODO: add schema
-genie_config:
-  genie_space_id: 
+mlflow_config:
+  experiment_name: /Users/ben.doan@databricks.com/dynamic_auth_agent
+  registered_model_name: doan.dynamic_governance_example.dynamic_auth_agent
+agent_config:
+  llm_endpoint_name: databricks-claude-sonnet-4-5
+  genie_space_id: 01f10d0b2baf1a3996db0de2a453d4c9
+  genie_agent_name: customer_transactions_agent
+  genie_agent_description: "This agent can answer questions about customer transactions via Genie."
+  system_prompt: |
+    You are a supervisor in a multi-agent system.
+
+    1. Understand the user's last request
+    2. Read through the entire chat history.
+    3. If the answer to the user's last request is present in chat history, answer using information in the history.
+    4. If the answer is not in the history, from the below list of agents, determine which agent is best suited to answer the question.
+    5. Provide a summarized response to the user's question.
+    6. You should only use the Genie agent's response to formulate your answer. DO NOT make any additional inferences.
